--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,14 @@ jobs:
       run: poetry install --no-interaction
     
     - name: Check code formatting with Black
-      run: poetry run black --check src/ main.py
+      run: |
+        if ! poetry run black --check src/ main.py; then
+          echo "::error::Black formatting check failed. Showing diff:"
+          poetry run black --diff src/ main.py
+          echo ""
+          echo "To fix locally, run: poetry run black src/ main.py"
+          exit 1
+        fi
     
     - name: Lint with flake8
       run: poetry run flake8 src/ main.py --count --select=E9,F63,F7,F82 --show-source --statistics
